force-app/main/default/objects/Policy__c/Policy__c.object-meta.xml
<CustomObject>
    <label>Policy</label>
    <pluralLabel>Policies</pluralLabel>
    <nameField>
        <label>Policy Number</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Synthetic insurance policy record used by the beneficiary manager demo. Not an FSC object.</description>
</CustomObject>