force-app/main/default/objects/Policy__c/fields/Policyholder_Name__c.field-meta.xml
<CustomField>
    <fullName>Policyholder_Name__c</fullName>
    <label>Policyholder Name</label>
    <type>Text</type>
    <length>120</length>
</CustomField>