force-app/main/default/objects/Policy__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Term Life</fullName><default>false</default><label>Term Life</label></value>
            <value><fullName>Whole Life</fullName><default>false</default><label>Whole Life</label></value>
            <value><fullName>Fixed Annuity</fullName><default>false</default><label>Fixed Annuity</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>